test_suite/tests/compile-fail/private_flags.stderr
error[E0603]: struct `Flags2` is private
  --> $DIR/private_flags.rs:19:26
   |
19 |     let flag2 = example::Flags2::FLAG_B;
   |                          ^^^^^^
